@@ -3416,7 +3416,6 @@ function Counter(db) {
 	self.$events = {};
 }
 
-Counter.prototype.promise = promise;
 Counter.prototype.emit = function(name, a, b, c, d, e, f, g) {
 	var evt = this.$events[name];
 	if (evt) {
@@ -4492,7 +4491,6 @@ function Binary(db, directory) {
 	this.$refresh();
 }
 
-Binary.prototype.promise = promise;
 Binary.prototype.$refresh = function() {
 	this.meta.index = 0;
 	this.meta.count = 0;
@@ -5111,7 +5109,6 @@ function Indexes(db, directory) {
 	} catch (e) {}
 }
 
-Indexes.prototype.promise = promise;
 Indexes.prototype.create = function(name, properties, type) {
 
 	var self = this;
@@ -5677,7 +5674,6 @@ function Storage(db, directory) {
 	}
 }
 
-Storage.prototype.promise = promise;
 Storage.prototype.refresh = function() {
 	try {
 		this.$mapreduce = Fs.readFileSync(this.$mapreducefile).toString('utf8').parseJSON(true);
